# ParkAnalyser

./: CMakeLists.txt  LICENSE  README.md
include/: CarLog.h  ParkLog.h  Parser.h  Position.h
source/: CarLog.cpp  ParkLog.cpp  Parser.cpp  Position.cpp
testes/: ParkLogTest.cpp  ParserTest.cpp  car_data.txt  test.cpp
testes/config/: car_data (with error).txt  car_data.txt
